# LinkTimePolymorphismBasicsProject

./: .clang-format  CMakeLists.txt  README.md
App/: CMakeLists.txt  Main.cpp
